# chicken_core

./: dependency.repos
.github/workflows/: pre-commit.yaml
control/control_bringup/: CMakeLists.txt  package.xml
control/control_bringup/launch/: control_bringup.xml
control/joy_translate/: joy_translate  package.xml  setup.py
control/joy_translate/joy_translate/: joy_translate_node.py
control/joy_translate/src/: joy_translate.cpp
control/wheelbot_control/wheelbot_control/: wheelbot_control_node.py
core/chick_nav_msgs/: CMakeLists.txt  README.md  package.xml
core/chick_nav_msgs/srv/: NavigateToGoal.srv
core/chicken_core/launch/: chicken_core.launch.py  chicken_core.launch.xml
core/chicken_simulator/rviz/: rviz.rviz
core/wheelbot_description/meshes/: Intel_Realsense_D435_1.stl  (+1 more)
localization/localization_bringup/: CMakeLists.txt  package.xml
log/: latest_build
map_server/map/: map.yaml
planner/a_star_planner/: CMakeLists.txt  README.md  package.xml
planner/a_star_planner/config/: planner_params.yaml
planner/a_star_planner/include/a_star_planner/: a_star_component.hpp  astar_planner.hpp  smoother.hpp
planner/a_star_planner/launch/: a_star_planner.launch.py
planner/a_star_planner/src/: a_star_component.cpp
planner/planner_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
planner/pure_pursuit_planner/: CMakeLists.txt
sensor/grid_map_generator/: package.xml
sensor/sensor_bringup/: CMakeLists.txt  package.xml  setup.py
utils/make_map_bringup/: CMakeLists.txt  package.xml
utils/map_manager/: CMakeLists.txt  package.xml
(+395 files in other folders)
